# project-grandson

./: .gitignore  .gitmodules  README.md  main.py  vision_claude.py
Claude Desktop/: Claude_DesktopApp.swift  ContentView.swift  PythonBridge.swift
Claude Desktop.xcodeproj/: project.pbxproj
Claude Desktop.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Claude Desktop.xcodeproj/xcuserdata/nikitagamolsky.xcuserdatad/xcschemes/: xcschememanagement.plist
Claude DesktopTests/: Claude_DesktopTests.swift
Claude DesktopUITests/: Claude_DesktopUITests.swift  Claude_DesktopUITestsLaunchTests.swift
Python/: pyproject.toml  vision_claude.py
backend/: .gitignore  .gitmodules  README.md  api.py  config.py  daily_pipecat.py  message_handler.py  pyproject.toml  vision_claude.py
backend/bot/: bot.py  config.py  hot_reload.py
backend/bot/frame_processors/: transcript_processor.py
backend/frame_processors/: image_processor.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  Release.entitlements  info.plist  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: AudioWaveform.tsx  ConversationView.tsx  Home.tsx
frontend/src/providers/: DailyProvider.tsx
frontend/src/support/: constants.ts  getParticipantList.ts  useCallState.ts
